--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   padding-left: 0;
   padding-right: 0;
 }
+
 .container-fluid {
   padding-left: 0;
   padding-right: 0;
@@ -30,9 +31,11 @@ body {
 .navbar {
   padding: 0;
 }
+
 .navbar-brand {
   margin-left: 30px;
 }
+
 .number {
   margin-right: 30px;
   padding: 30px 0px;
@@ -46,6 +49,7 @@ body {
   background: black;
   border-radius: 0;
 }
+
 .navbar-toggler span {
   font-size: 40px;
   color: white;
@@ -66,9 +70,11 @@ body {
   .navbar {
     display: flex;
   }
+
   .navbar-brand {
     order: -2;
   }
+
   .number {
     order: -1;
   }
@@ -77,8 +83,8 @@ body {
 /*Header*/
 .header {
   background-image: url(../img/background.png);
-  height: 500px;
 }
+
 .header h2 {
   display: inline-block;
   color: #ffffff;
@@ -88,11 +94,145 @@ body {
   background: linear-gradient(to left, #f74c00, #f68b1f);
   margin: 0;
   padding: 0 50px;
+  position: relative;
+  z-index: 20;
 }
+
 .header h2:first-child {
   margin-top: 25px;
   margin-left: 80px;
 }
+
 .header h2:last-child {
   margin-left: 170px;
+}
+
+/*Первая форма*/
+.form1 {
+  position: relative;
+  z-index: 20;
+  margin-left: 80px;
+  margin-top: 20px;
+  background: linear-gradient(to left, #44c8f5, #c8f1ff);
+  border: 1px solid #205ebd;
+  border-radius: 15px;
+  padding: 30px 20px 3px 20px;
+  font-family: 'Montserrat', sans-serif;
+  color: #000;
+}
+
+.form1 h3 {
+  font-weight: 700;
+  font-size: 30px;
+}
+
+.form1 p.text {
+  position: relative;
+  left: 25px;
+  font-size: 20px;
+}
+
+.form1 p.text:before {
+  position: absolute;
+  display: block;
+  top: 8px;
+  left: -30px;
+  width: 17px;
+  height: 13px;
+  content: "";
+  background-image: url(../img/checked.png);
+}
+
+.form1 p.small {
+  margin-top: 15px;
+  font-size: 12px;
+  text-decoration: underline;
+}
+
+.form1 button {
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 900;
+  border: none;
+  padding: 15px 20px;
+  border-radius: 30px;
+  font-size: 20px;
+  background: linear-gradient(to left, #f74c00, #f68b1f);
+}
+
+.form1 input {
+  background: #d0ebff;
+  border: solid 1px #205ebd;
+  padding: 15px 20px;
+  border-radius: 30px;
+  font-size: 18px;
+}
+
+.form1 input::placeholder {
+  color: #000000;
+}
+
+.ellipse {
+  position: absolute;
+  top: -100px;
+  right: 100px;
+  z-index: 10;
+}
+
+.sale {
+  position: absolute;
+  top: -40px;
+  right: 260px;
+  z-index: 30;
+}
+
+.rocket {
+  position: absolute;
+  top: -10px;
+  right: 530px;
+  z-index: 30;
+}
+
+.ship {
+  position: absolute;
+  top: 150px;
+  right: 0px;
+  z-index: 30;
+}
+
+.helicopter {
+  position: absolute;
+  top: 20px;
+  right: 15px;
+  z-index: 30;
+}
+
+/*Вторая форма*/
+.form2 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  background: linear-gradient(to left, #8effc3, #d0fed3);
+  border: 1px solid #01a759;
+}
+.form2 input {
+  background: #daffdd;
+  border: #01a056 solid 1px;
+}
+.form2 p.bold {
+  font-size: 22px;
+  font-weight: bold;
+}
+.form2 p.checked {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+.form2 p.checked span {
+  font-weight: bold;
+  color: #01985d;
+}
+.present {
+  position: absolute;
+  top: -30px;
+  right: 0px;
+  z-index: 30;
 }
