--- a/css/style.css
+++ b/css/style.css
@@ -215,28 +215,34 @@ body {
   background: linear-gradient(to left, #8effc3, #d0fed3);
   border: 1px solid #01a759;
 }
+
 .form2 input {
   background: #daffdd;
   border: #01a056 solid 1px;
 }
+
 .form2 p.bold {
   font-size: 22px;
   font-weight: bold;
 }
+
 .form2 p.checked {
   font-size: 18px;
   margin-bottom: 5px;
 }
+
 .form2 p.checked span {
   font-weight: bold;
   color: #01985d;
 }
+
 .present {
   position: absolute;
   top: -30px;
   right: 0px;
   z-index: 30;
 }
+
 ul.social {
   display: flex;
   color: #000;
@@ -251,24 +257,29 @@ ul.social {
   z-index: 70;
   margin: 0;
 }
+
 ul.social li {
   padding-left: 10px;
 }
+
 .man {
   position: absolute;
   bottom: 0;
   left: 50px;
   z-index: 60;
 }
+
 /*О компании*/
 .about {
   background-image: url(../img/aboutBack.png);
   font-family: 'Montserrat', sans-serif;
 }
+
 .about .container {
   background: #fff;
   border: 1px solid #acc7d9;
 }
+
 .about h2 {
   margin-top: 70px;
   margin-bottom: 50px;
@@ -276,21 +287,26 @@ ul.social li {
   text-align: center;
   text-transform: uppercase;
 }
+
 .about ul {
   font-size: 20px;
   list-style: none;
 }
+
 .about ul li {
   padding: 10px;
-  position: relative; 
+  position: relative;
 }
+
 .about ul li+hr {
   margin: 0;
   max-width: 50%;
 }
+
 .about p {
   font-size: 20px;
 }
+
 .about button {
   text-transform: uppercase;
   font-weight: 900;
@@ -303,14 +319,18 @@ ul.social li {
   font-size: 22px;
   transition: 0.3s;
 }
+
 .about button:hover {
   color: #fff;
   background: linear-gradient(to left, #f74c00, #f68b1f);
 }
+
 /* Услуги */
 .service {
   background-image: url(../img/serviceBack.png);
+  font-family: 'Montserrat', sans-serif;
 }
+
 .service h2 {
   text-transform: uppercase;
   margin-top: 60px;
@@ -318,6 +338,7 @@ ul.social li {
   color: #fff;
   font-weight: 900;
 }
+
 .service p {
   font-size: 20px;
   color: #fff;
@@ -325,6 +346,7 @@ ul.social li {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
 .service button {
   color: #fff;
   background: linear-gradient(to left, #f74c00, #f68b1f);
@@ -337,6 +359,7 @@ ul.social li {
   font-size: 22px;
   transition: 0.3s;
 }
+
 .service div.mount {
   display: flex;
   justify-content: center;
@@ -345,6 +368,7 @@ ul.social li {
   border-radius: 50%;
   background: rgba(110, 110, 110, 0.5);
 }
+
 .sale1 {
   position: absolute;
   width: 150px;
@@ -353,3 +377,314 @@ ul.social li {
   z-index: 30;
 }
 
+/* Этапы работы */
+.steps {
+  background-image: url(../img/steps.png);
+  font-family: 'Montserrat', sans-serif;
+}
+
+.steps .container {
+  padding-left: 40px;
+  padding-right: 40px;
+  background: #fff;
+  border: 1px solid #acc7d9;
+}
+
+.steps h2 {
+  font-weight: 900;
+  color: #000;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+.item-steps {
+  padding: 0;
+  max-width: 100%;
+  height: 103px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../img/stepEmpty.png);
+  margin-bottom: 185px;
+}
+
+.item-steps p {
+  margin-top: 15px;
+  margin-left: 10px;
+}
+
+.item-steps.active {
+  color: #fff;
+  background-image: url(../img/stepFull.png);
+}
+
+.item-steps img[alt="1"],
+.item-steps img[alt="2"],
+.item-steps img[alt="3"],
+.item-steps img[alt="4"] {
+  position: absolute;
+  left: -30px;
+  top: 30px;
+}
+
+/* Примеры работ */
+.portfolio {
+  background: #f6f7f9;
+}
+
+.portfolio h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  color: #000;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+.portfolio img {
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-bottom: 80px;
+  box-shadow: 0px 20px 24px -9px rgba(0, 0, 0, 0.5);
+}
+
+/*слайдер*/
+.slick-prev,
+.slick-next {
+  height: 35px;
+  width: 20px;
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  /* to position the arrows left and right at the bottom of slider */
+  position: absolute;
+  z-index: 10;
+  bottom: 0;
+}
+
+.slick-prev {
+  background-image: url('../img/arrLeft.png');
+  left: 0;
+}
+
+.slick-prev:hover,
+.slick-prev:focus {
+  background-image: url('../img/arrLeft.png');
+  opacity: 0.8;
+}
+
+.slick-next {
+  background-image: url('../img/arrRight.png');
+  right: 0;
+}
+
+.slick-next:hover,
+.slick-next:focus {
+  background-image: url('../img/arrRight.png');
+  opacity: 0.8;
+}
+
+/* Заказчику */
+.customer {
+  background-image: url(../img/customer.png);
+  font-family: 'Montserrat', sans-serif;
+}
+.customer .container {
+  padding-left: 40px;
+  padding-right: 40px;
+  background: #fff;
+  border: 1px solid #acc7d9;
+}
+.customer h2 {
+  font-weight: 900;
+  color: #000;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+.customer p {
+  color: #fff;
+  text-decoration: underline;
+}
+.customer button {
+  color: #000;
+  background: white;
+  border: none;
+  padding: 10px 40px;
+  border-radius: 25px;
+  box-shadow: 0px 7px 12px 0px rgba(0, 0, 0, 0.3);
+}
+.customer span {
+  display: block;
+  text-decoration: underline;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+.customer .orange {
+  padding: 30px;
+  background: #f6891e;
+  background-image: url(../img/orange.png);
+  background-size: contain;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  border-radius: 8px;
+  height: 100%;
+}
+.customer .red {
+  padding: 30px;
+  background: #d63933;
+  background-image: url(../img/red.png);
+  background-size: contain;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  border-radius: 8px;
+  height: 100%;
+}
+.customer .blue {
+  padding: 30px;
+  background: #2283c7;
+  background-image: url(../img/blue.png);
+  background-size: contain;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  border-radius: 8px;
+  height: 100%;
+}
+.customer .green{
+  padding: 30px;
+  background: #1bb363;
+  background-image: url(../img/green.png);
+  background-size: contain;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  border-radius: 8px;
+  height: 100%;
+}
+/* Отзывы */
+.review {
+  display: flex;
+  background-image: url(../img/reviewBack.png);
+  background-repeat: no-repeat;
+  padding: 30px 90px;
+  text-align-last: left;
+}
+.review.right {
+  background-image: url(../img/reviewBackRight.png);
+}
+.review div p:first-child {
+  padding-left: 30px;
+  color: #f6891e;
+  text-decoration: none;
+  font-size: 13px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.review div p:last-child {
+  padding-left: 30px;
+  color: #000;
+  text-decoration: none;
+}
+.medal {
+  z-index: 9999;
+  position: absolute;
+  top: 40px;
+  right: 20px
+}
+/* Кнопки */
+.buttons {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+  margin-top: 50px;
+}
+.buttons button.button1 {
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 900;
+  background: linear-gradient(to left, #f74c00, #f68b1f);
+  padding: 10px 30px;
+  border: none;
+  border-radius: 30px;
+  transition: 0.3s;
+}
+.buttons button.button1:hover {
+  border: 1px solid #f68b1f;
+  color: #f68b1f;
+  background: transparent;
+}
+.buttons button.button2 {
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  font-weight: 900;
+  padding: 10px 30px;
+  border-radius: 30px;
+  border: 1px solid #f68b1f;
+  color: #f68b1f;
+  background: transparent;
+}
+.buttons button.button2:hover {
+  background: linear-gradient(to left, #f74c00, #f68b1f);
+  color: #fff;
+  border: none;
+}
+/* Футер */
+.footer {
+  font-family: 'Montserrat', sans-serif;
+  background: #232426;
+}
+.footer .row {
+  padding-top: 30px;
+}
+.footer ul li {
+  text-align: left;
+  list-style: none;
+  color: #b4b4b4;
+}
+.footer .col-2 {
+  border-right: 1px dotted #81818141;
+}
+.footer .col-3 {
+  border-right: 1px dotted #81818141;
+}
+.footer .col-12 {
+  padding-top: 10px;
+}
+.footer .copy {
+  font-size: 20px;
+  font-weight: bold;
+}
+.footer .copy span {
+  font-weight: 900;
+}
+.footer .borderNone {
+  border: none;
+}
+.fa-phone, .fa-envelope {
+  color: #f68b1f;
+}
+.fa-phone {
+  border: 1px solid #f68b1f;
+  font-size: 12px;
+  padding: 4px;
+  border-radius: 50%;
+}
+.fa-envelope  {
+  font-size: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.socialNet i {
+  text-align: center;
+  border-radius: 50%; 
+  border: 1px solid #818181;
+  font-size: 20px;
+  height: 38px;
+  width: 38px;
+  padding: 8px;
+}
